--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 
 <body>
    <main>
-    <section class="titulo">
-        <h1 >Tus necesidades nutricionales </h1>
-    </section>
-    <section>
-        <section class="section1">
-            <h2>Calculadora de calorías</h1>
-            <p>¿Te gustaría conocer cuántas calorías gastas en un día? Nosotros te lo diremos.</p>
-            <button class="btn"><a href="./paginas/recoleccionDatos.html">Haz click aquí :D </a></button>
+    <div class="bloquerow">
+        <section class="titulo">
+            <h1 >Tus necesidades nutricionales </h1>
         </section>
-    </section>
+        <section>
+            <section class="section1">
+                <h2>Calculadora de calorías</h1>
+                <p>¿Te gustaría conocer cuántas calorías gastas en un día? Nosotros te lo diremos.</p>
+                <button class="btn"><a href="./paginas/recoleccionDatos.html">Haz click aquí :D </a></button>
+            </section>
+            <section class="section1">
+                <h2>¿Ya has hecho tus calculos?</h1>
+                <p>Ingresa aqui y revisa los datos calculados</p>
+                <button class="btn"><a href="./paginas/leerDatosCalculados.html">Haz click aquí :D </a></button>
+            </section>
+        </section>
+    </div>
    </main>
     <footer>
         <p>Programa hecho por Oscar Agreda: <a href="https://www.linkedin.com/in/oscar-ortiz-597179172/">Perfil de LinkedIn</a></p>
