En este commit mejoré la parte visual

--- a/paginas/leerDatosCalculados.html
+++ b/paginas/leerDatosCalculados.html
@@ -22,7 +22,7 @@
                 <button id="botonConsultarDatos" class="btn">Enviar</button>
                 
             </div>
-            <div id="divOcultoleerDatosCalculados" class="partetitulo oculto" >
+            <div id="divOcultoleerDatosCalculados" class="partetituloDivOculto oculto" >
                 <h3>Edad</h3>
                 <p id="mostrarDatoEdad">---</p>
                 <h3>Estatura</h3>
