En este commit agregué la libreria sweet alert y mejoré los estilos css

--- a/paginas/leerDatosCalculados.html
+++ b/paginas/leerDatosCalculados.html
@@ -14,15 +14,13 @@
         <div class="titulo">
             <div class="partetitulo">
                 <h1>Veamos los datos calculados</h1>
-                <p>--</p>
             </div>
             <div class="partetitulo">
                 <h2>Ingresa tu nombre</h2>
                 <input type="text" id="ingresarNombre" name="ingresarNombre"><br><br>
                 <button id="botonConsultarDatos" class="btn">Enviar</button>
-                
             </div>
-            <div id="divOcultoleerDatosCalculados" class="partetituloDivOculto oculto" >
+            <div id="divOcultoleerDatosCalculados" class="oculto " >
                 <h3>Edad</h3>
                 <p id="mostrarDatoEdad">---</p>
                 <h3>Estatura</h3>
@@ -35,7 +33,6 @@
                 <p id="mostrarDatoEjercicio">---</p>
                 <h3>TDEE</h3>
                 <p id="mostrarDatoTdee">---</p>
-
             </div>
         </div>
     </main>
@@ -43,6 +40,7 @@
         <p>Programa hecho por Oscar Agreda: <a href="https://www.linkedin.com/in/oscar-ortiz-597179172/">Perfil de
                 LinkedIn</a></p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../main.js"></script>
 </body>
 
