--- a/paginas/recoleccionDatos.html
+++ b/paginas/recoleccionDatos.html
@@ -64,6 +64,7 @@
         <p>Programa hecho por Oscar Agreda: <a href="https://www.linkedin.com/in/oscar-ortiz-597179172/">Perfil de
                 LinkedIn</a></p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../main.js"></script>
 </body>
 
