La entrega está completa, la haré revisar por el monitor y estaré atento a cambios

--- a/paginas/leerDatosCalculados.html
+++ b/paginas/leerDatosCalculados.html
@@ -20,7 +20,7 @@
                 <input type="text" id="ingresarNombre" name="ingresarNombre"><br><br>
                 <button id="botonConsultarDatos" class="btn">Enviar</button>
             </div>
-            <div id="divOcultoleerDatosCalculados" class="oculto " >
+            <div id="divOcultoleerDatosCalculados" class="oculto rosahaciaabajo " >
                 <h3>Edad</h3>
                 <p id="mostrarDatoEdad">---</p>
                 <h3>Estatura</h3>
@@ -34,7 +34,7 @@
                 <h3>TDEE</h3>
                 <p id="mostrarDatoTdee">---</p>
             </div>
-            <div id="divOcultoMostrarDieta" class="oculto " >
+            <div id="divOcultoMostrarDieta" class="oculto rosahaciaarriba" >
                 <h2>Ejemplo de dieta de <span id="spanMostrarCaloriasDieta"></span> calorias para tener en cuenta</h2>
                 <h3>Desayuno</h3>
                 <p id="mostrarDatoDesayuno">---</p>
